# a7-py

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPILER_HANDLING_REVIEW.md  COMPLETION_AUDIT.md  LANGUAGE_SPEC_REVIEW.md  LICENSE  MISSING_FEATURES.md  README.md  RELEASE.md  RELEASE_READINESS_REVIEW.md  SECURITY.md  TODO.md  main.py  plan.md  pyproject.toml  run_all_tests.sh
.github/: dependabot.yml
a7/: __init__.py  ast_nodes.py  ast_preprocessor.py  cast_classifier.py  compile.py  errors.py  generics.py  module_resolver.py  parser.py  safety.py  semantic_context.py  symbol_table.py  tokens.py  types.py
docs/: CHANGELOG.md  ERROR_ANALYSIS.md  RELEASE.md  SAFETY_CONTRACT.md  SECURITY.md  SPEC.md  STATUS.md
examples/: 001_hello.md  003_comments.a7  004_func.a7  006_if.a7  011_memory.a7  013_pointers.a7  014_generics.a7  016_unions.a7  017_methods.a7  019_literals.a7  022_function_pointers.a7  023_inline_structs.a7  025_linked_list.a7  026_binary_tree.a7  027_callbacks.a7  028_state_machine.a7  029_sorting.a7  030_calculator.a7  032_prime_numbers.a7  033_fibonacci.a7  034_string_utils.a7  035_matrix.a7  036_control_flow_edges.a7  037_language_tour.a7  038_inventory_report.a7  039_text_analyzer.a7  040_task_board.a7  041_route_simulation.a7  042_gradebook.a7
scripts/: build_examples.py  check_docs_style.py  check_no_secrets.py  error_stage_common.py  generate_release_manifest.py  project_status.py  verify_archive_contents.py  verify_backend_parity.py  verify_error_stages.py  verify_examples_common.py  verify_examples_e2e.py  verify_examples_e2e_c.py  (+2 more)
(+259 files in other folders)
