[project]
name = "a7-py"
version = "0.3.0"
description = "A compiler for the A7 systems programming language with Zig code generation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.1.0",
]

[project.scripts]
a7 = "a7.cli:main"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=8.4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["a7*"]
